# swoledad

./: .gitignore  CODEREVIEW.md  DEV_DIARY.md  README.md  plan.md  progress.md  pyproject.toml
app/: __init__.py  analytics_service.py  config_service.py  dashboard_service.py  db.py  external_sync.py  finalize_service.py  garmin_adapter.py  garmin_history_backfill.py  history_service.py  pirate_garmin_client.py  plate_loading.py  queue_service.py  reconciliation_service.py  routes_config.py  routes_pages.py  routes_workouts.py  schema.sql  set_service.py  suggestions.py  sync_worker.py  time_utils.py  validation.py  workout_service.py
app/static/: admin.js  (+5 more)
demo/: issue-9-rearrange-workout-page.md  rejected-finalize-deletes-draft.md
manual_testing/: issue-9-rearrange-workout-page.md  rejected-finalize-deletes-draft.md  set_id_clearing.md  test_set_id_clearing.py
plans/: 1rm_missing.md  analytics_plan.md  analytics_plan2.md  delete_button.md  discard_draft.md  history_date_select.md  simplify_offline_mode.md  weight_intervals.md  workout_list_plan.md
scripts/: backfill_garmin_history.py  bootstrap_garmin_tokens.py  import_exercises_csv.py
steps/: slice1.md  slice2.md  slice3.md  slice4.md  slice5.md  slice6.md  slice7.md
tests/: conftest.py  test_analytics.py  test_config_routes.py  test_config_service.py  test_dashboard_routes.py  test_env_loading.py  test_external_sync.py  test_garmin_history_backfill.py  test_garmin_status.py  test_history_routes.py  test_pirate_garmin_client.py  test_queue_and_finalize.py  test_reconciliation.py  test_workout_features.py
(+16 files in other folders)
