[project]
name = "personal-workout-companion"
version = "0.1.0"
description = "Personal Workout Companion"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0,<4.0",
  "garminconnect>=0.2.40,<0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
